tests/snapshots/compiler_error_fixtures/header_counts__MixedBroken.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/header_counts/MixedBroken.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
