tests/snapshots/compiler_error_fixtures/header_counts__MixedMain.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/header_counts/MixedMain.flx
== compile ==
failed (compile)
== diagnostics ==
Warning[W201]: Cross-Module Constructor Access

Direct constructor access `SomeInt` from module `MixedBroken` bypasses module API boundaries.

  examples/compiler_errors/header_counts/MixedMain.flx:7:14
  |
7 |     let _x = MixedBroken.SomeInt(1)
  |              ^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Prefer module `public fn` factory/accessor API for cross-module usage.


error[E300]: Annotation Type Mismatch

The value of `value` does not match its type annotation.

  examples/compiler_errors/header_counts/MixedMain.flx:8:22
  |
8 |     let value: Int = "oops"
  |                      ^^^^^^
  |                      ------ this value has type `String`

  |                --- but `value` was annotated as `Int`

Note:
  annotated type: Int
  value type: String

Help:
  Change `value` to a `Int` value or update the annotation.

Found 1 error and 1 warning.
== stdout ==
<not executed>
