tests/snapshots/compiler_error_fixtures/header_counts__WarningMain.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/header_counts/WarningMain.flx
== compile ==
ok
== diagnostics ==
Warning[W201]: Cross-Module Constructor Access

Direct constructor access `SomeInt` from module `WarningOnly` bypasses module API boundaries.

  examples/compiler_errors/header_counts/WarningMain.flx:6:14
  |
6 |     let _x = WarningOnly.SomeInt(1)
  |              ^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Prefer module `public fn` factory/accessor API for cross-module usage.
== stdout ==
<not executed>
